<resources>
    <string name="app_name">Ride</string>
    <string name="logo_content_description">Ride Logo</string>
    <string name="reg_email_field_hint">Email</string>
    <string name="reg_name_text_hint">Enter your name</string>
    <string name="reg_password_hint">Password</string>
    <string name="reg_pwd_conf_hint">Confirm Your Password...</string>
    <string name="reg_btn_tab">Sign Up</string>
    <string name="reg_login_btn_txt">Sign In</string>
    <string name="login_email_field_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_tab_txt">Sign In</string>
    <string name="login_btn_txt">Continue</string>
    <string name="login_reg_btn_txt">Sign Up</string>
    <string name="splash_title_text">Welcome to\n Ride</string>
    <string name="splash_marketing_message">Start contributing to reduce pollution around our towns</string>
    <string name="start_onboarding_email_button_text">Email</string>
    <string name="cd_splash_onboarding_email_btn">Email</string>
    <string name="cd_splash_marketing_message">Ride Marketing Message</string>
    <string name="cd_splash_title">Welcome to Ride</string>
    <string name="login_name_field_txt">Name</string>
    <string name="login_name_field">Name</string>
    <string name="login_forgot_pwd_txt">Forgot Password</string>
    <string name="cd_login_tab">Sign In</string>
    <string name="user_profile_default_img">User Profile Default Image</string>
    <string name="choose_picture_btn_txt">Choose Your Picture</string>
    <string name="save_picture_btn_txt">Save Your Picture</string>
    <string name="skip_step">Skip for Now</string>
    <string name="round_img">Round shape</string>
    <string name="propose_ride_txt">Propose a Ride</string>
    <string name="starting_point_hint">Where are you leaving from?</string>
    <string name="finishing_point_hint">Where do you go?</string>
    <string name="date_time_txt">Date and Time</string>
    <string name="pick_departure_date_hint">Pick a departure date</string>
    <string name="create_ride_btn_txt">Save my Ride</string>
    <string name="nbr_seat_txtview">Number of seats available</string>
    <string name="search_btn_txt">Search for a Ride</string>
    <string name="search_starting_point_hint">Where do you want to start from?</string>
    <string name="search_ride_btn_txt">Search a Ride</string>
    <string name="user_picked_btn_txt">Book with this user</string>
</resources>
