<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7fa"
    tools:context=".SearchRide">

    <Button
        android:id="@+id/search_ride_btn"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_shape"
        android:padding="16dp"
        android:text="@string/search_ride_btn_txt"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searched_departure_date_txtview" />

    <EditText
        android:id="@+id/search_starting_point_txt"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/input_field_light"
        android:fontFamily="@font/montserrat"
        android:hint="@string/starting_point_hint"
        android:inputType="text|textCapCharacters|textCapWords"
        android:padding="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_finishing_point_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field_light"
        android:fontFamily="@font/montserrat"
        android:hint="@string/finishing_point_hint"
        android:inputType="text|textCapCharacters|textCapWords"
        android:padding="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_starting_point_txt" />

    <TextView
        android:id="@+id/date_time_txtview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:padding="16dp"
        android:text="@string/date_time_txt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_finishing_point_txt" />

    <EditText
        android:id="@+id/searched_departure_date_txtview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field_light"
        android:fontFamily="@font/montserrat"
        android:hint="@string/pick_departure_date_hint"
        android:padding="16dp"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/search_calendar_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_time_txtview" />

    <ImageButton
        android:id="@+id/search_calendar_btn"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_shape"
        app:layout_constraintBottom_toBottomOf="@+id/searched_departure_date_txtview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/searched_departure_date_txtview"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/result_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_ride_btn" />

</android.support.constraint.ConstraintLayout>